objects/Manuterm_Calculation_Rule__c/Manuterm_Calculation_Rule__c.object-meta.xml
<CustomObject>
    <label>Manuterm Calculation Rule</label>
    <nameField>
        <displayFormat>Rule-{0000000000}</displayFormat>
        <label>Manuterm Calculation Rule Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Manuterm Calculation Rules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>