objects/Manuterm_Calculation_Rule__c/fields/annual_hk_band_2_min_premium__c.field-meta.xml
<CustomField>
    <fullName>annual_hk_band_2_min_premium__c</fullName>
    <label>annual_hk_band_2_min_premium</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>