objects/Manuterm_Calculation_Rule__c/fields/annual_hk_band_2_premium_rate__c.field-meta.xml
<CustomField>
    <fullName>annual_hk_band_2_premium_rate__c</fullName>
    <label>annual_hk_band_2_premium_rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>