objects/Manuterm_Calculation_Rule__c/fields/manuterm_type__c.field-meta.xml
<CustomField>
    <fullName>manuterm_type__c</fullName>
    <label>manuterm_type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>10</fullName>
            </value>
            <value>
                <fullName>20</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>