objects/Manuterm_Calculation_Rule__c/fields/sex__c.field-meta.xml
<CustomField>
    <fullName>sex__c</fullName>
    <label>sex</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>M</fullName>
            </value>
            <value>
                <fullName>F</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>