objects/Manuterm_Calculation_Rule__c/fields/smoke_flag__c.field-meta.xml
<CustomField>
    <fullName>smoke_flag__c</fullName>
    <label>smoke_flag</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Y</fullName>
            </value>
            <value>
                <fullName>N</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>